# dino

./: .gitignore  docker-compose.yml  frame_cross_attention.py  imageNetDownload.py  main_dino.py  requirements.txt  run_visualize.sh  run_visualize_attention.sh  setup_dino.sh  t.py  video_generation_with_attention.py  vision_transformer.py  visualize_attention.py  visualize_attention_basic.py  visualize_attention_multi.py  visualize_mean_attention_dist.py  visualize_mean_attention_dist_multi.py
dist-output/vit_base_patch16/: vit_base_patch16_mad_values.tsv
dist-output/vit_base_patch8/: vit_base_patch8_mad_values.tsv
dist-output/vit_small_patch16/: vit_small_patch16_mad_values.tsv
dist-output/vit_small_patch8/: vit_small_patch8_mad_values.tsv
environments/: Dockerfile  pyproject.toml
