[tool.poetry]
name = "dino"
version = "0.1.0"
description = "DINO v1"
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8" 
torch = "1.7.1"
torchvision = "0.8.2"
submitit = "1.3.3"
pycocotools = "^2.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
